remove weird bug where navbar collapse overlaps search results

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     overflow: hidden;
+
 }
 
 .node {
@@ -31,25 +32,28 @@ body {
     width: 100%;
     pointer-events: none;
     position: fixed;
-    margin-top: 150px;
+    margin-top: 100px;
     margin-left: 5%;
     opacity: 0.8;
 }
 
 #search_results_row {
+    pointer-events: none;
     width: 100%;
     position: fixed;
-    margin-top: 50px;
     margin-left: 5%;
 }
 
+#tree_row {
+  margin-top: -50px;
+}
+
 #search_results {
-  pointer-events: fill;
   padding-left: 15px;
 }
 
 #search_results_table {
-
+  pointer-events: fill;
 }
 
 #search_results td {
@@ -121,8 +125,4 @@ body {
 
 .navbar-header {
   margin-left: 5% !important;
-}
-
-#navbar_two {
-  position:fixed;
 }
